<resources>
    <string name="app_name">Reporting app</string>
    <string name="meer_informatie">Meer informatie</string>
    <string name="melding_verzenden">Melding verzenden</string>
    <string name="reparatie_op">Reparatie op</string>
    <string name="kiezen">Kiezen</string>
    <string name="mededeling">Mededeling</string>
    <string name="uitvoeren_door">Uitvoeren door</string>
    <string name="naam">Naam</string>
    <string name="verzenden">Verzenden</string>
    <string name="terug">Terug</string>
    <string name="nieuwe_meldingen">Nieuwe meldingen</string>
    <string name="authenticatie">Authenticatie</string>
    <string name="voer_je_ap_email_in">Voer je AP Email in</string>
    <string name="invoeren">Invoeren</string>
    <string name="details">Details</string>
    <string name="ap_email">AP Email</string>
    <string name="verdieping">Verdieping</string>
    <string name="lokaal">Lokaal</string>
    <string name="categorie">Categorie</string>
    <string name="opmerking">Opmerking</string>
    <string name="urgentie">Urgentie</string>
    <string name="timestamp">timeStamp</string>
    <string name="isafgehandeld">isAfgehandeld</string>
    <string name="bekijken">Bekijken</string>
    <string name="in_behandeling">Alle meldingen</string>
    <string name="nieuwe_melding">Nieuwe melding</string>
    <string name="admin">Admin</string>
    <string name="afhandeling_details">Afhandeling details</string>
    <string name="uitgevoerd">Uitgevoerd</string>
    <string name="door_persoon">Door</string>
    <string name="persoon">Persoon</string>
    <string name="verlopen">Verlopen</string>
    <string name="scorebord">Scorebord</string>
    <string name="schade_vaststellen">Schade vaststellen</string>
    <string name="foto_toevoegen">Foto toevoegen</string>
    <string name="maken">Maken</string>
    <string name="urgentie_waarde">Urgentie waarde</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="afhandeling">Afhandeling</string>
    <string name="niet_afgehandeld">Niet afgehandeld</string>
    <string name="is_gerepareerd">Is gerepareerd</string>
    <string name="nog_niet_gerepareerd">Nog niet gerepareerd</string>
    <string name="default_waarde">leeg</string>
    <string-array name="verdiepingen">
        <item />
        <item>-1</item>
        <item>Gelijkvloers</item>
        <item>1ste</item>
        <item>2de</item>
        <item>3de</item>
        <item>4de</item>
        <item>Dak</item>
    </string-array>
    <string-array name="lokaalMin1">
        <item>-01.67</item>
        <item>-01.68</item>
        <item>-01.68A</item>
        <item>-01.71</item>
        <item>-01.72A</item>
        <item>-01.72B</item>
        <item>-01.72C</item>
        <item>-01.G01</item>
        <item>-01.L02</item>
        <item>-01.T05</item>
    </string-array>
    <string-array name="lokaalGelijkVloers">
        <item>00.01</item>
        <item>00.02</item>
        <item>00.03</item>
        <item>00.04</item>
        <item>00.05</item>
        <item>00.06</item>
        <item>00.07</item>
        <item>00.08</item>
        <item>00.09</item>
        <item>00.10</item>
        <item>00.11</item>
        <item>00.12</item>
        <item>00.13</item>
        <item>00.14</item>
        <item>00.15</item>
        <item>00.16</item>
        <item>00.17</item>
        <item>00.18</item>
        <item>00.40</item>
        <item>00.42</item>
        <item>00.43</item>
        <item>00.44</item>
        <item>00.45</item>
        <item>00.46</item>
        <item>00.47</item>
        <item>00.48</item>
        <item>00.50</item>
        <item>00.51</item>
        <item>00.52A</item>
        <item>00.52B</item>
        <item>00.53</item>
        <item>00.54</item>
        <item>00.55</item>
        <item>00.56</item>
        <item>00.57</item>
        <item>00.60</item>
        <item>00.60A</item>
        <item>00.61</item>
        <item>00.62</item>
        <item>00.63</item>
        <item>00.64</item>
        <item>00.G01</item>
        <item>00.G02</item>
        <item>00.G03</item>
        <item>00.T01</item>
        <item>00.T02</item>
        <item>00.T03</item>
        <item>00.T04</item>
        <item>00.T05</item>
        <item>00.T06</item>
        <item>00.T07</item>
    </string-array>
    <string-array name="lokaal1ste">
        <item>01.01</item>
        <item>01.02</item>
        <item>01.03</item>
        <item>01.04</item>
        <item>01.05</item>
        <item>01.06</item>
        <item>01.07</item>
        <item>01.08/1</item>
        <item>01.08/2</item>
        <item>01.08/3</item>
        <item>01.09</item>
        <item>01.10</item>
        <item>01.11</item>
        <item>01.12</item>
        <item>01.13</item>
        <item>01.14</item>
        <item>01.15</item>
        <item>01.16</item>
        <item>01.17</item>
        <item>01.18</item>
        <item>01.19</item>
        <item>01.20</item>
        <item>01.21</item>
        <item>01.22</item>
        <item>01.23</item>
        <item>01.50</item>
        <item>01.51</item>
        <item>01.52</item>
        <item>01.60</item>
        <item>01.61</item>
        <item>01.62</item>
        <item>01.63</item>
        <item>01.64</item>
        <item>01.65</item>
        <item>01.66</item>
        <item>01.G01</item>
        <item>01.G02</item>
        <item>01.G03</item>
        <item>01.G04</item>
        <item>01.G05</item>
        <item>01.L01</item>
        <item>01.T01</item>
        <item>01.T02</item>
        <item>01.T03</item>
        <item>01.T04</item>
        <item>01.T06</item>
        <item>01.T07</item>
    </string-array>
    <string-array name="lokaal2de">
        <item>02.01</item>
        <item>02.02</item>
        <item>02.03</item>
        <item>02.04</item>
        <item>02.05</item>
        <item>02.06</item>
        <item>02.07</item>
        <item>02.08</item>
        <item>02.09</item>
        <item>02.10</item>
        <item>02.11</item>
        <item>02.50</item>
        <item>02.51</item>
        <item>02.52</item>
        <item>02.60</item>
        <item>02.G01</item>
        <item>02.L01</item>
        <item>02.T01</item>
        <item>02.T02</item>
        <item>02.T03</item>
        <item>02.T06</item>
    </string-array>
    <string-array name="lokaal3de">
        <item>03.01</item>
        <item>03.02</item>
        <item>03.03</item>
        <item>03.04</item>
        <item>03.05</item>
        <item>03.06</item>
        <item>03.07</item>
        <item>03.08</item>
        <item>03.09</item>
        <item>03.10</item>
        <item>03.11</item>
        <item>03.12</item>
        <item>03.13</item>
        <item>03.14</item>
        <item>03.50</item>
        <item>03.51</item>
        <item>03.52A</item>
        <item>03.52B</item>
        <item>03.T01</item>
        <item>03.T02</item>
        <item>03.T03</item>
    </string-array>
    <string-array name="lokaal4de">
        <item>04.01</item>
        <item>04.02</item>
        <item>04.03</item>
        <item>04.04</item>
        <item>04.05</item>
        <item>04.06</item>
        <item>04.07</item>
        <item>04.08</item>
        <item>04.09</item>
        <item>04.10</item>
        <item>04.11</item>
        <item>04.12</item>
        <item>04.13</item>
        <item>04.14</item>
        <item>04.17</item>
        <item>04.18</item>
        <item>04.19</item>
        <item>04.20</item>
        <item>04.21</item>
        <item>04.22</item>
        <item>04.23</item>
        <item>04.24</item>
        <item>04.25</item>
        <item>04.26</item>
        <item>04.27</item>
        <item>04.28</item>
        <item>04.50A</item>
        <item>04.50B</item>
        <item>04.50C</item>
        <item>04.51A</item>
        <item>04.51B</item>
        <item>04.51C</item>
        <item>04.52</item>
        <item>04.60</item>
        <item>04.61</item>
        <item>04.G01</item>
        <item>04.T01</item>
        <item>04.T02</item>
    </string-array>
    <string-array name="lokaalDak">
        <item>Dak</item>
    </string-array>
    <string-array name="categorie">
        <item />
        <item>Deur</item>
        <item>Meubilair</item>
        <item>Sanitair</item>
        <item>Stopcontact</item>
        <item>Raam</item>
        <item>Verlichting</item>
        <item>Verluchting</item>
        <item>Verwarming</item>
        <item>Andere</item>
    </string-array>
    <string-array name="urgenties">
        <item>Zeer laag</item>
        <item>Laag</item>
        <item>Gemiddeld</item>
        <item>Hoog</item>
        <item>Zeer hoog</item>
    </string-array>
    <string-array name="uitvoering">
        <item />
        <item>AP</item>
        <item>Provincie</item>
        <item>Andere</item>
    </string-array>
</resources>
